# iptables_stats

./: .gitignore  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pipy_release.yml  publish_docker_image.yml
conf/: iptables_stats.conf
ipban_stats/: __main__.py  config.py  ipban_stats.py  ipset.py  iptables_stats.py  mqtt.py  sinks.py
ipban_stats/reading_modules/: iptables.py
iptables_stats/: config.py  iptables_stats.py  mqtt.py  sinks.py
iptables_stats/reading_modules/: dummy.py  ipset.py  iptables.py
src/iptables_stats/: __main__.py  iptables_stats.py
