# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = iptables_stats
description = Periodically gathers and publishes statistics about iptables
author = verybadsoldier
author_email = vbs@springrts.de
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/verybadsoldier/iptables_stats

# Add here related links, for example:
project_urls =
    Documentation = https://github.com/verybadsoldier/iptables_stats
    Source = https://github.com/verybadsoldier/iptables_stats
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
    Tracker = https://github.com/verybadsoldier/iptables_stats/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
# python_requires = >=3.8

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    ipsetpy==0.0.1a3
    paho-mqtt==1.*
    python-iptables==1.*
    pyptables==1.*
    schedule==1.*
    pyyaml==6.*


[options.packages.find]
where = src


[options.entry_points]
    console_scripts =
        iptables_stats = iptables_stats.__main__:main
